@@ -3,7 +3,7 @@
 pixmaps = \
 	arpadd.xpm arprename.xpm formsave.xpm patternstore.xpm \
 	arpremove.xpm editmodeon.xpm play.xpm patternremove.xpm \
-	qmidiarp2.xpm midiclock.xpm lfoadd.xpm\
+	qmidiarp2.xpm midiclock.xpm lfoadd.xpm lfowavcp.xpm\
 	filenew.xpm filesave.xpm filesaveas.xpm fileopen.xpm filequit.xpm
 	
 EXTRA_DIST = $(pixmaps)
